FIX: align-items on Flexbox

--- a/HTML_CSS/Flexbox/app.css
+++ b/HTML_CSS/Flexbox/app.css
@@ -12,10 +12,11 @@ h1 {
     border: 5px solid #003049;
     /*axix(축) 지정*/
     display: flex;
-    flex-direction: column;        /*가로 축 지정*/
+    flex-direction: row;        /*가로 축 지정*/
     /*flex-direction: row-reverse;    /*가로 축 지정 후 역순으로 나열*/
     justify-content: space-evenly;        /*주축 오른쪽으로 변경*/
     flex-wrap: nowrap;                      /*공간이 없을 시 행/열을 추가하여 나열*/
+    align-items: flex-start;                /*교차축에 의해 나열*/
 }
 
 #container div {
